# Termind

./: .gitignore  CMakeLists.txt  README.md  TERMIND.md
include/termind/: ai_client.h  config.h  context_manager.h  repl.h  skill_manager.h  tool_registry.h  tui.h  utils.h
src/: ai_client.cpp  config.cpp  context_manager.cpp  main.cpp  repl.cpp  skill_manager.cpp  tool_registry.cpp  tui.cpp  utils.cpp
